Add server_data template

--- a/.gitignore
+++ b/.gitignore
@@ -121,4 +121,7 @@ dist
 !.vscode/extensions.json
 *.code-workspace
 
+### Project files ###
+server_data.js
+
 # End of https://www.toptal.com/developers/gitignore/api/vscode,node
